# Mjlab_RL_Assembly

./: .gitignore  README.md  pyproject.toml
src/mjlab_rl_assembly/: __init__.py  peg_env_cfg.py
src/mjlab_rl_assembly/cfg/: commands.py  constants.py  events.py  observations.py  rewards.py  scence.py  terminations.py  utils.py
src/mjlab_rl_assembly/meshes/: lens_0_95837269.stl  lens_1_0ea760e3.stl  lens_2_17e9b118.stl  lens_3_374e2d52.stl  lens_4_f4180c93.stl  lens_5_7c8fdeea.stl  lens_6_d1d8923f.stl  lens_7_fc00ca60.stl  lens_8_7af0c489.stl  lens_f8a76047.STL  main_body_peg_f2370d47.STL  peg_base.STL
src/mjlab_rl_assembly/mjcf/: UR5e.xml  get_effective_inertias.py  peg.xml
src/mjlab_rl_assembly/utils/: feasible_reset_dataset.csv  feasible_reset_dataset.npz  monte_carlo_sample.py
