[project]
name = "mjlab-rl-assembly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TDC-TangChaoBanLi", email = "lihao_0630@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mink>=1.1.0",
    "mjlab>=1.3.0",
]


[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"


[project.entry-points."mjlab.tasks"]
mjlab_rl_assembly = "mjlab_rl_assembly"